goldderby.com (archived on 2009-06-16)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "entertainment",
  "char_count": 10733,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.62,
  "homepage_snapshot_redirected_domain": "latimes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090528030206id_/http://theenvelope.latimes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090601092907id_/http%3A//goldderby.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "latimes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616081103id_/http%3A//theenvelope.latimes.com/privacypolicy",
  "policy_title": "Privacy Policy - The Envelope - LA Times",
  "policy_url": "theenvelope.latimes.com/privacypolicy",
  "sha1": "1bbc7570ee3573547815d016bf72e3c819812d9b",
  "simhash": 589227054779190753,
  "simhash_updated": false,
  "site_hostname": "goldderby.com",
  "site_url": "http://goldderby.com",
  "smog": 15.77,
  "strict_updated": false,
  "timestamp": "20090616081103",
  "word_count": 1721,
  "year": 2009
}

--- a/g/go/gol/goldderby.com.html
+++ b/g/go/gol/goldderby.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the goldderby.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216151554id_/http%3A//theenvelope.latimes.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goldderby.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616081103id_/http%3A//theenvelope.latimes.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
+
 
 
 
@@ -72,8 +73,8 @@ function Search(type) {
 <div id="shadow_left">
 
 <div id="leaderbox">
-<script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;dcopt=ist;sz=728x90;tile=1;ord=63308729?" type="text/javascript"></script>
-        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;sz=728x90;tile=1;ord=63308729?" target="_blank"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;dcopt=ist;sz=728x90;tile=1;ord=63308729?" width="728" height="90" border="0" alt=""></a></noscript>
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;dcopt=ist;sz=728x90;tile=1;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" type="text/javascript"></script>
+        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;sz=728x90;tile=1;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" target="_blank" rel="nofollow"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=T;dcopt=ist;sz=728x90;tile=1;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" width="728" height="90" border="0" alt=""></a></noscript>
 
 <div style="width:970px; height:1px; font-size:1px; line-height:1px; background-color:#d8d8d8; clear:both;">&nbsp;</div>
 </div>
@@ -89,9 +90,18 @@ function Search(type) {
 <div id="header_logo" class="clearfix">
 <style type="text/css">
 <!--
-#topsponsor88x31 { width:86px; height:40px; position:absolute; top:98px; left:878px; }
+
+#topsponsor120x60 {width:120px;height:60px;float:right;margin-right:10px;margin-top:-14px;}
+
+/*#topsponsor120x60 { width:120px; height:60px; position:absolute; top:20px; left:858px; }
+#topsponsor88x31 {width:86px;height:40px;position:absolute;top:98px; left:878px;}*/
 -->
 </style>
+<!--[if IE]>
+<style type="text/css">
+#topsponsor120x60 {margin-top:-4px;}
+</style>
+<![endif]-->
 
 
 
@@ -100,8 +110,8 @@ function Search(type) {
 
 
 
-<div id="topsponsor88x31" align="center"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=88x31;tile=2;ord=63308729?" type="text/javascript"></script>
-        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=88x31;tile=2;ord=63308729?" target="_blank"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=88x31;tile=2;ord=63308729?" width="88" height="31" border="0" alt=""></a></noscript></div>
+<div id="topsponsor120x60" align="center"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=120x60;tile=2;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" type="text/javascript"></script>
+        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=120x60;tile=2;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" target="_blank" rel="nofollow"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;sz=120x60;tile=2;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" width="120" height="60" border="0" alt=""></a></noscript></div>
 
 
 
@@ -221,19 +231,19 @@ function Search(type) {
     </div>
 
 <hr size="1" noshade="noshade" class="thin" color="#CCCCCC" /> -->
-<div class="headline11red">Dec. 14</div>
+<div class="headline11red">June 7</div>
 
-<div style="font: normal 11px arial,verdana,sans-serif; color: #333;">
-      • AFI Awards honorees announced 
+<div style="font:normal 11px arial,verdana,sans-serif; color:#333333;">
+      • Tony Awards
   
-    </div> 
+    </div>
 
 <hr size="1" noshade="noshade" class="thin" color="#CCCCCC">
 
-<div class="headline11red">Dec. 16</div>
+<div class="headline11red">June 7-9</div>
 
 <div style="font:normal 11px arial,verdana,sans-serif; color:#333333;">
-      • SAG nominations ballots due
+      • Webby celebration
   
     </div>
 
@@ -266,12 +276,12 @@ function Search(type) {
 
 
 
-<div align="center"><a href="/galleries/photo/env-hff-awards-08-arrivals-pg,0,1453633.photogallery" target=""><img src="http://theenvelope.latimes.com/media/thumbnails/photogallery/2008-10/43086328-28120758.jpg" alt="Hollywood Film Fest Awards" border="0" width="140" height="110"></a></div>
+<div align="center"><a href="/galleries/photo/env-et-spike-tv-awards-2009-pictures,0,5677845.photogallery" target=""><img src="http://theenvelope.latimes.com/media/thumbnails/photogallery/2009-05/47232258-31215917.jpg" alt="Spike TV Awards 2009" border="0" width="140" height="110"></a></div>
 
 
 <div style="padding: 8px; background-color: #fff;">
 
-<div class="headline11"><img src="/images/icons/camera.gif" align="left" width="12" height="8" border="0" alt="photo">&nbsp;&nbsp;<a href="/galleries/photo/env-hff-awards-08-arrivals-pg,0,1453633.photogallery" target="">Hollywood Film Fest Awards</a></div>
+<div class="headline11"><img src="/images/icons/camera.gif" align="left" width="12" height="8" border="0" alt="photo">&nbsp;&nbsp;<a href="/galleries/photo/env-et-spike-tv-awards-2009-pictures,0,5677845.photogallery" target="">Spike TV Awards 2009</a></div>
 
 </div>
 
@@ -301,7 +311,7 @@ function Search(type) {
 
 
 
-<div class="headline11"><a href="http://www.latimes.com/entertainment/news/env-gd-quantum-solace-link,0,192489.storylink" target="">Report: Oscar voter's screener of 'Quantum of Solace' leaked on the web</a> &gt;&gt;</div>
+<div class="headline11"><a href="http://www.latimes.com/entertainment/news/la-st-letterman-palin-sorry-l,0,765101.storylink" target="">Letterman apologizes for joke, but Palin supporters vow to continue fight</a> &gt;&gt;</div>
 
 <hr class="thin" size="1" noshade="noshade">
 
@@ -309,7 +319,7 @@ function Search(type) {
 
 
 
-<div class="headline11"><a href="http://www.latimes.com/entertainment/news/la-hc-fanboy-gift-guide-link,0,6222912.storylink" target="">Fanboy gift guide for 2008</a> &gt;&gt;</div>
+<div class="headline11"><a href="http://www.latimes.com/entertainment/news/la-bp-michael-mann-enemies-link,0,5663019.storylink" target="">Michael Mann: The inside scoop on 'Public Enemies'</a> &gt;&gt;</div>
 
 <hr class="thin" size="1" noshade="noshade">
 
@@ -317,7 +327,7 @@ function Search(type) {
 
 
 
-<div class="headline11"><a href="http://www.latimes.com/entertainment/news/la-et-american-idol-15dec15-link,0,3217302.storylink" target="">'American Idol': Change is a comin'</a> &gt;&gt;</div>
+<div class="headline11"><a href="http://www.latimes.com/entertainment/news/la-cotown-graden-link,0,3317522.storylink" target="">Graden leaving MTV Networks</a> &gt;&gt;</div>
 
 <hr class="thin" size="1" noshade="noshade">
 
@@ -439,38 +449,64 @@ In the event case of any conflict between the terms of this policy and the terms
 
 
 <br clear="all">
-<div id="quigobox" class="wrapper" style="padding:8px 0;">
-<div align="center">
-<table width="600" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr valign="top">
-<td>
-<script language="javascript" type="text/javascript">
-<!--
-adsonar_pid=548757;
-adsonar_ps=1245704;
-adsonar_zw=590;
-adsonar_zh=200;
-adsonar_jv='ads.adsonar.com';
-// -->
-</script>
+<div>
+<!-- start google ads -->
+<style type="text/css">
+.ad_mrec{border-top:1px solid #ddd;margin-top:1em;padding:8px 16px;position:relative;text-align:left;font:11px Arial;padding-top:8px;}
+.ads_google {background-color:#FFFFFF;color:#818181;font-weight:bold;padding:4px;position:relative;text-transform:uppercase;top:-16px;width:120px;margin-left:84px;}
+.text-ad {line-height:14px;margin-bottom:1em;text-align:left;}
+.text-ad a{font-weight:bold;text-decoration:underline}
+.text-ad-link a{color:#000;text-decoration:none;font:10px Arial}
+</style>
 
-<div style="width: auto; height: auto; border: 1px solid #999; background-color: #fff; padding: 2px; margin-bottom: 8px;">
-<div id="quigoheader"><div style="display: inline; float: right; text-transform: none;"><a href="http://www.latimes.com/services/site/adservices/la-quigo-intro,0,1108842.htmlstory">Buy a link</a></div>
-Local Ads</div>
-<script language="javascript" type="text/javascript" src="http://js.adsonar.com/js/adsonar.js"></script></div>
-</td>
-</tr>
-</tbody></table>
+<script language="javascript" type="text/javascript">
+//<![CDATA[
+
+function google_ad_request_done(google_ads) {
+if (google_ads.length < 1 ){return;}
+document.write('<div class="ad_mrec">');
+document.write('<div style="text-align:center;margin-top:-16px;"><div style="color:#818181;margin:auto;margin-top:-10px;background-color:#fff;width:110px;font-weight:bold;">ADS BY GOOGLE</div></div>');
+if (google_ads[0].type == 'text') {
+for(i = 0; i < google_ads.length; ++i) {
+document.write('<div class="text-ad">');
+document.write('<a href="' + google_ads[i].url + '" onmouseover="window.status=\'' + google_ads[i].visible_url + '\'; return true;" onmouseout="window.status=\'\'; return true;" class="ad-link">' + google_ads[i].line1 + '</a>');
+document.write('<div>');
+document.write(google_ads[i].line2);
+if (google_ads[i].line3 != null && google_ads[i].line3 != '') {
+document.write(' ');
+document.write(google_ads[i].line3);
+}
+document.write('</div><div class="text-ad-link">');
+document.write('<a href="' + google_ads[i].url + '" onmouseover="window.status=\'' + google_ads[i].visible_url + '\'; return true;" onmouseout="window.status=\'\'; return true;">' + google_ads[i].visible_url + '</a>');
+document.write('</div></div>');
+}
+}
+document.write("</div>");
+}
+google_ad_client   = 'ca-tribune_st_js';
+google_ad_output   = 'js';
+google_max_num_ads = '3';
+
+if(document.location.pathname.indexOf(".") > 0) {google_ad_channel  = 'Theenvelope_article';}
+else if(document.location.pathname=="/"){google_ad_channel  = 'Theenvelope_homepage';}
+else{google_ad_channel  = 'Theenvelope_sectionfront';}
+
+google_ad_type='text';
+google_safe='high';
+//]]>
+</script>
+<div style="background-color:#fff;overflow:hidden;">
+<script type="text/javascript" language="javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 </div>
-</div>
+<!-- end google ads --></div>
 </td>
 
 <td style="padding:8px 8px 8px 0; width:160px;">
 <div style="clear:both;"><img src="/images/ads/ad_158.gif" width="160" height="10" border="0"></div>
-<div style="margin-bottom:8px;"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;ord=63308729?" type="text/javascript"></script>
-        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;ord=63308729?" target="_blank"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;ord=63308729?" width="160" height="600" border="0" alt=""></a></noscript></div>
-<div style="margin-bottom:8px;"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;ord=63308729?" type="text/javascript"></script>
-        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;ord=63308729?" target="_blank"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;ord=63308729?" width="160" height="600" border="0" alt=""></a></noscript></div>
+<div style="margin-bottom:8px;"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" type="text/javascript"></script>
+        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" target="_blank" rel="nofollow"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=1;sz=160x600;tile=3;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" width="160" height="600" border="0" alt=""></a></noscript></div>
+<div style="margin-bottom:8px;"><script language="JavaScript" src="http://ad.doubleclick.net/adj/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" type="text/javascript"></script>
+        <noscript><a href="http://ad.doubleclick.net/jump/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" target="_blank" rel="nofollow"><img src="http://ad.doubleclick.net/ad/trb.theenvelope/service/site;ptype=s;slug=env-privacy;rg=ur;pos=2;sz=160x600;tile=4;u=http://theenvelope.latimes.com/services/site/env-privacy,0,7841411.htmlstory;ord=43974130?" width="160" height="600" border="0" alt=""></a></noscript></div>
 </td>
 </tr>
 </tbody></table>
@@ -480,8 +516,13 @@ Local Ads</div>
 
 
 
+<div id="globalInclude">
+  
+</div>
+
 <div id="footer">
-<div id="footertext">Copyright © 2008, Los Angeles Times. By visiting this site you are agreeing to our <a href="http://theenvelope.latimes.com/privacypolicy">Privacy Policy</a>  |  <a href="http://theenvelope.latimes.com/termsofservice">Terms of Service</a> | <a href="http://theenvelope.latimes.com/aboutus">About Us</a> | <a href="http://theenvelope.latimes.com/contactus">Contact Us</a> | <a href="mailto:theenvelopeadvertising@latimes.com">Advertise</a> | <a href="http://theenvelope.latimes.com/sitemap">Site Map</a></div>
+<div id="footertext">Copyright © 2009, Los Angeles Times. By visiting this site you are agreeing to our <a href="http://theenvelope.latimes.com/privacypolicy">Privacy Policy</a>  |  <a href="http://theenvelope.latimes.com/termsofservice">Terms of Service</a> | <a href="http://theenvelope.latimes.com/aboutus">About Us</a> | <a href="http://theenvelope.latimes.com/contactus">Contact Us</a> | <a href="mailto:theenvelopeadvertising@latimes.com">Advertise</a> | <a href="http://theenvelope.latimes.com/sitemap">Site Map</a></div>
+<div id="footertext"><address>202 West 1st Street, Los Angeles, California, 90012</address></div>
 </div>
 
 </div></div>
@@ -506,6 +547,11 @@ var tcdacmd="da;dt;rcid=";
 <script src="http://an.tacoda.net/an/12174/slf.js" language="javascript" type="text/javascript"></script>
 
 
+
+
+
+
+    
 
 
 
@@ -537,11 +583,13 @@ var tcdacmd="da;dt;rcid=";
             
 
 
+
+
 <!-- SiteCatalyst code version: H.1.
 Copyright 1997-2005 Omniture, Inc. More info available at
 http://www.omniture.com -->
 
-	<script type="text/javascript" src="/central/javascript/mtrx/s_code.js"></script><img name="s_i_tribglobal" height="1" width="1" border="0" alt="" src="https://sm.trb.com/b/ss/tribglobal/1/H.2-pdv-2/s45379606891853?[AQB]&amp;ndh=1&amp;t=1/1/2020%200%3A21%3A6%206%200&amp;vmt=4418B580&amp;ns=tribuneinteractive&amp;pageName=Privacy%20Policy%20-%20The%20Envelope%20/%20services%20/%20site%20-%20htmlsto.&amp;g=https%3A//web.archive.org/web/20081216151554id_/http%3A//theenvelope.latimes.com/services/site/env-privacy%2C0%2C7841411.htmlstory&amp;cc=USD&amp;ch=The%20Envelope%3Aservices&amp;server=theenvelope.latimes.com&amp;events=event5&amp;h1=The%20Envelope%3Aservices%3Asite&amp;h2=services%3Asite&amp;h4=services%3Asite&amp;v20=The%20Envelope&amp;v21=htmlstory&amp;c30=N&amp;c38=htmlstory&amp;c44=env-privacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
+	<script type="text/javascript" src="/central/javascript/mtrx/s_code.js"></script><img name="s_i_tribglobal" height="1" width="1" border="0" alt="" src="https://sm.trb.com/b/ss/tribglobal/1/H.2-pdv-2/s48446689936008?[AQB]&amp;ndh=1&amp;t=1/1/2020%200%3A21%3A5%206%200&amp;vmt=4418B580&amp;ns=tribuneinteractive&amp;pageName=Privacy%20Policy%20-%20The%20Envelope%20/%20services%20/%20site%20-%20htmlsto.&amp;g=https%3A//web.archive.org/web/20090616081103id_/http%3A//theenvelope.latimes.com/services/site/env-privacy%2C0%2C7841411.htmlstory&amp;cc=USD&amp;ch=The%20Envelope%3Aservices&amp;server=theenvelope.latimes.com&amp;events=event5&amp;h1=The%20Envelope%3Aservices%3Asite&amp;h2=services%3Asite&amp;h4=services%3Asite&amp;v20=The%20Envelope&amp;v21=htmlstory&amp;c30=N&amp;c38=htmlstory&amp;c44=env-privacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]">
 	<script language="JavaScript">
 <!--
 
@@ -646,7 +694,7 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
 <!-- End SiteCatalyst code version: H.1. -->
 
 
-	
+
 <!-- START REVENUE SCIENCE PIXELLING CODE -->
 <script src="http://js.revsci.net/gateway/gw.js?csid=B08725"></script>
 <script>
@@ -657,7 +705,9 @@ DM_cat(s.hier1);
 DM_tag();
 </script>
 <!-- END REVENUE SCIENCE PIXELLING CODE -->
-	<img width="1" height="1" src="http://pixel1739.everesttech.net/1739/p?ev_transid=1229440554592630104718&amp;ev_TheEnvelope_services_s_pageview=1">
+
+
+
 
 
 
