--- a/m/mu/mul/multiview.com.html
+++ b/m/mu/mul/multiview.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the multiview.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216013124id_/http%3A//www.multiview.com/privacyPolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the multiview.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616084919id_/http%3A//www.multiview.com/privacyPolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta name="keywords" content="online directory, multiview, web directory, vertical search, association directory, online guide, net directory, association guide, electronic directory, ultimate guide, association member directory, buyers guide, member directory, multi view, print directory, onlinedirectories, verticalsearch, webdirectories, association solutions, vertical, search, online, directory, web, member, ultimate, guide, directories, guides, multi, view, resources, industry
@@ -45,7 +45,7 @@ online advertising
 
 	">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	<meta content="Mon, 15 Dec 2008 19:31:23 -0600" name="date">
+	<meta content="Tue, 16 Jun 2009 03:48:29 -0500" name="date">
 	<meta content="all" name="robots">
 	<title>MultiView - Privacy Policy</title>
 		<link rel="stylesheet" type="text/css" href="css/defaultStyle2.css"> 
@@ -59,19 +59,20 @@ online advertising
 		fOn= new Image(); 
 		fOn.src="images/text_fld_bg_on.png"; 
 	</script>
+	<script language="JavaScript" src="ClickTracker/click_tracker.js"></script>
 </head>
 <body>
 	<div id="Container">
 		<div id="Logo"><a href="index.php"><img src="images/multiview_logo_header.gif" alt="MultiView"></a></div>
-		<div id="TollFree">
-			<img src="images/toll_free.png" alt="800-816-6710">
-		</div>
+		<!-- <div id="TollFree">
+			<img src="images/toll_free.png" alt="800-816-6710" />
+		</div> -->
 		<div id="NavHeader">
 			<div class="Inline" style="padding: 0 0 0 10px;"></div>
 			<ul>
 				<li><a title="Home" href="index.php">Home</a></li>
 				<li><a title="Online Supplier Directories" href="publishingPartnerships/pPoverview.php">Online Supplier Directories</a></li>
-				<li><a title="Industry News Briefs" href="multibriefs/MBassoc.php">Industry News Briefs</a></li>
+				<li><a title="Industry News Briefs" target="_blank" href="http://www.multibriefs.com/">Industry News Briefs</a></li>
 				<li><a title="Publishing Technology" href="publishingTechnology/pToverview.php">Publishing Technology</a></li>
 				<li><a title="About Us" href="aboutUs.php">About Us</a></li>
 				<li><a title="Contact Us" href="contactUs.php">Contact Us</a></li>
@@ -141,10 +142,10 @@ online advertising
 				<li><a title="Copyright Info" href="http://www.multiview.com/copyrightPolicy.php">Copyright Info</a></li>
 				<li><a title="W9 Form" href="http://www.multiview.com/images/W9-Form.pdf">W-9 Form</a></li>
 				<li><a title="Contact Us" href="http://www.multiview.com/contactUs.php">Contact Us</a></li>
-				<li><a title="Careers" href="http://www.multiview.com/careers.php">Careers</a></li>
+				<li><a title="Careers" href="salesjobs.php" onclick="record_click('/privacyPolicy.php', 'Footer_Careers');">Careers</a></li>
 			</ul>
 			<!-- <div id="W3C" style=" left: 266px;"><span id="space"><a title="Valid W3C XHTML 1.0!" href="http://validator.w3.org/check?uri=referer">W3C XHTML 1.0</a></span></div> -->
-			<div id="Copyright">Copyright © 2008 by MultiView, Inc.</div>
+			<div id="Copyright">Copyright © 2009 by MultiView, Inc.</div>
 		</div>
 		<div class="Spacer">&nbsp;</div>
 	</div>
