--- a/o/oa/oar/oarticles.com.html
+++ b/o/oa/oar/oarticles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oarticles.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216060355id_/http%3A//www.oarticles.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oarticles.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616085334id_/http%3A//oarticles.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>Privacy Policy - OArticles - Build A Web Site with Articles</title>
@@ -17,7 +17,7 @@
         <td class="title_top_left"><a id="top"></a><h1 class="title"><a href="/">OArticles - Build A Web Site with Articles</a></h1></td>
         <td class="title_top_right">
         <div class="quicknav">
-          <a href="http://www.cmrlkr.net/trackit/go.php?c=bt&amp;s=oa1" target="_blank">The Berry Tree</a>
+          <a href="http://delaynot.com/see-why" target="_blank">Delay Not</a>
           | <a href="/">Home</a>
           | <a href="/newarticle/">Submit</a>
           | <a href="/search/">Search</a>
@@ -43,17 +43,7 @@
 
 <div align="center">
 <br>
-<script type="text/javascript"><!--
-google_ad_client = "pub-5419314707797735";
-/* 728x90, created 2/23/08 on Oarticles.com */
-google_ad_slot = "0923680774";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
+     <a href="http://www.cmrlkr.net/freedom-at-home-team.html" target="_blank"><img src="/images/banner_Freedomathometeam.jpg"></a>
 </div>
 
     <table class="main" border="0" cellspacing="0">
@@ -93,8 +83,7 @@ google_ad_height = 90;
    <!-- Block_SponsorsTop -->
 <div align="center">
 <br>
-<a href="http://www.cmrlkr.com/g/7" target="_blank"><img border="1" src="/images/banner_SkyscrapeYounger.jpg" alt="Affordable Health Care"></a>
-
+<a href="http://login.tracking101.com/ez/bvgkkkfldllk/"><img src="http://login.tracking101.com/42/14888/69668/" alt="" border="0"></a>
 </div>
 
 <!-- /Block_SponsorsTop -->
@@ -129,7 +118,7 @@ google_ad_height = 90;
   </div>
     <div class="impressum">
     <ul>
-     <li> 4 users online. </li>
+     <li> 11 users online. </li>
     </ul>
   </div> 
 
@@ -189,7 +178,7 @@ If you feel that this site is not following its stated information policy, you m
     </tbody></table>
     <div class="footer">
 <!-- footer -->
-<br>Copyright © 2008 OArticles.com, All Rights Reserved. | <a href="http://www.oarticles.com/partners/resources.php">Partners</a> | <a href="http://www.oarticles.com/internet-business-online-articles/index.html">Internet &amp; Online Business Articles</a>
+<br>Copyright © 2009 OArticles.com, All Rights Reserved.  
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
