--- a/g/gl/gla/glassgiant.com.html
+++ b/g/gl/gla/glassgiant.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the glassgiant.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216020805id_/http%3A//www.glassgiant.com/help.php%3Ftopic%3D32) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the glassgiant.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616091812id_/http%3A//www.glassgiant.com/help.php%3Ftopic%3D32) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>GlassGiant.com Help</title>
@@ -13,9 +13,7 @@
 		_uacct = "UA-127515-2";
 		urchinTracker();
 	</script //-->
-<!-- BEGIN: AdSolution-Tag 4.3: Global-Code [PLACE IN HTML-HEAD-AREA!] -->
-<script type="text/javascript" language="javascript" src="http://a.as-eu.falkag.net/dat/dlv/aslmain.js"></script>
-<!-- END: AdSolution-Tag 4.3: Global-Code -->
+
 </head>
 
 <body>
@@ -85,24 +83,26 @@ google_color_text = "000000";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script></div>
-<div class="cright">Copyright © 2001-2008 Glass Giant Ltd.  All rights reserved. &nbsp; &nbsp; <a href="/help.php?topic=32" class="cright">Privacy Policy.</a></div>
+<div class="cright">Copyright © 2001-2009 Glass Giant Ltd.  All rights reserved. &nbsp; &nbsp; <a href="/help.php?topic=32" class="cright">Privacy Policy.</a></div>
 		</td>
 		<td width="1" style="background-color:#1983c2" valign="top"><img src="graphics/bg-leftright.gif" style="width:1; height:117" alt=""></td>
 	</tr>
 </tbody></table>
-<div id="bannerad"><!-- TF 468x60 JScript NoPop code -->
-<center><script language="javascript"><!--
-document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=GlassGiantcom&adSpace=ROS&size=468x60&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
-//-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=GlassGiantcom&amp;adSpace=ROS&amp;size=468x60&amp;pop=0&amp;requestID=20158827790.6355461557932915"></script>
-<noscript>
-   <a href="http://a.tribalfusion.com/i.click?site=GlassGiantcom&adSpace=ROS&size=468x60&requestID=1983084249" target=_blank>
-   <img src="http://a.tribalfusion.com/i.ad?site=GlassGiantcom&adSpace=ROS&size=468x60&requestID=1983084249" 
-                  width=468 height=60 border=0 alt="Click Here"></a>
-</noscript>
-</center>
-<!-- TF 468x60 JScript NoPop code --></div></div>
+<div id="bannerad"><script type="text/javascript"><!--
+	e9 = new Object();
+    e9.size = "468x60";
+//--></script>
+<script type="text/javascript" src="http://tags.expo9.exponential.com/tags/GlassGiantcom/ROS/tags.js"></script></div></div>
 </div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7410686-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 
