--- a/s/su/sun/suncoastfcu.org.html
+++ b/s/su/sun/suncoastfcu.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the suncoastfcu.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216152407id_/http%3A//www.suncoastfcu.org/Default.aspx%3Ftabid%3D229) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the suncoastfcu.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616092121id_/http%3A//www.suncoastfcu.org/Default.aspx%3Ftabid%3D229) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head id="Head">
 		<title>
@@ -190,11 +190,11 @@
 											<!-- BEGIN FOOTER CODE -->
 											<table cellspacing="0" cellpadding="4" width="100%" bgcolor="#9fb5d7" border="0" id="Table1">
 													<tbody><tr>
-														<td class="footer" valign="middle" align="left" width="100%" background="/Portals/0/Skins/SWSkinsv3.0/footerbg.gif" height="35">Equal 
+											<td class="footer" valign="middle" align="left" width="80%" background="/Portals/0/Skins/SWSkinsv3.0/footerbg.gif" height="35">Equal 
 								Housing Lender <img id="Img1" title="Equal Housing Lender" alt="" src="/Portals/0/Skins/SWSkinsv3.0/equalhousing.gif" border="0">, 
-								Your Savings Federally Insured to $250,000 by NCUA, a U.S. Government 
-								Agency&nbsp;<a href="http://www.ncua.gov/"><img alt="click here to visit NCUA" src="/Portals/0/Skins/SWSkinsv3.0/ncua.gif" border="0"></a><br>	Copyright 1999 - 2008, Suncoast Schools Federal Credit Union</td><td class="footer" nowrap="" valign="middle" align="right" width="100%" background="/Portals/0/Skins/SWSkinsv3.0/footerbg.gif" height="35"><a class="searchLink" id="LogoHeader1_hplHeaderLinkRight" style="border: none;" href="/Default.aspx?tabid=229">Privacy Policy</a></td>
-													</tr>
+								Your Savings Federally Insured to at least $250,000 &amp; backed by the full faith &amp; credit of the U.S. Government&nbsp;<a href="http://www.ncua.gov/"><img alt="click here to visit NCUA" src="/Portals/0/Skins/SWSkinsv3.0/ncua.gif" border="0"></a><br> Copyright 1999 - 2009, Suncoast Schools Federal Credit Union |  
+								<a class="footerLink" id="LogoHeader1_hplHeaderLinkRight" style="border: none;" href="/Default.aspx?tabid=229">Privacy Policy</a></td>
+										</tr>
 												</tbody></table>
 												<!-- END FOOTER CODE -->
 												
@@ -219,6 +219,7 @@
 		</td>
 	</tr>
 </tbody></table>
+
 
 
 
