--- a/p/pr/pri/printsmadeeasy.com.html
+++ b/p/pr/pri/printsmadeeasy.com.html
@@ -1,81 +1,46 @@
-<!--The following is the downloaded HTML source of the printsmadeeasy.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216170250id_/http%3A//www.printsmadeeasy.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the printsmadeeasy.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616105842id_/http%3A//www.printsmadeeasy.com/privacy.php) for the most accurate reproduction.-->
 
-<html><head>
-<meta name="keywords" content="business card cards templates collecting printing print postcards design marketing  history backgrounds professional cheap">
-<title>PrintsMadeEasy - Privacy &amp; Security</title>
-<meta name="description" content="Save Money and Time by Printing Online. A fun and easy way to order Business Cards, Postcards, Stationery, and more.">
-<link rel="stylesheet" href="./library/stylesheet.css" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<title>PrintsMadeEasy: Privacy &amp; Security</title>
+<meta name="description" content="PrintsMadeEasy.com Privacy Policy">
+<link rel="stylesheet" href="./css/layout.css" type="text/css">
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<script language="javascript">
-
-	//Make an array of the images we want to preload for the mouse-overs.
-	arImageSrc = new Array (
-		"./images/button-go-d.gif"
-	)
-
-	//Preload images.
-	arImageList = new Array ();
-	for (counter in arImageSrc) {
-		arImageList[counter] = new Image();
-		arImageList[counter].src = arImageSrc[counter];
-	}
 
 
-	function makeNewWindow(address){
-		newWindow = window.open(address, "sub", "height=350,width=250,directories=no,location=no,menubar=no,scrollbars=no,status=no,toolbar=no,resizable=yes");
-		newWindow.focus();
-	}
-	function RemoveItem(CartID){
-		var	answeryes = confirm("Do you really want to remove this item from your shopping cart?  \nYou may loose changes unless your project has been saved.")
-
-		if(answeryes){
-			document.location = "./shoppingcart.php?removeitem=" + CartID;
-		}
-		return true;
-	}
-
-</script>
-
-<script src="./library/AC_RunActiveContent.js" type="text/javascript"></script>
 </head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" background="./images/template_back.png">
-
-<div align="center">
+<body style="background-image:url(images/template_back.png); margin:0px;">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr>
+<td align="center">
 <table width="764" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td width="2" bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2"></td>
-<td width="760" bgcolor="#FFFFFF">
-<script type="text/javascript">
-AC_FL_RunContent( 'codebase','https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0','width','760','height','95','src','nav_bar?securemode=&navopen=','quality','best','pluginspage','https://www.macromedia.com/go/getflashplayer','movie','nav_bar?securemode=&navopen=' );
-</script><object codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="760" height="95" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"><param name="movie" value="nav_bar.swf?securemode=&amp;navopen="> <param name="quality" value="best"> <embed width="760" height="95" src="nav_bar.swf?securemode=&amp;navopen=" quality="best" pluginspage="https://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"></object>
-<noscript>
-<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" WIDTH=760 HEIGHT=95>
-<PARAM NAME=movie VALUE="./nav_bar.swf?securemode=&navopen="> <PARAM NAME=quality VALUE=best> <PARAM NAME=bgcolor VALUE=#FFFFFF>
-<EMBED src="./nav_bar.swf?securemode=&navopen=" quality=best bgcolor=#FFFFFF  WIDTH=760 HEIGHT=95 TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></EMBED>
-</OBJECT>
-</noscript>
+<td width="2" bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2" alt=""></td>
+<td width="760" bgcolor="#FFFFFF" align="left">
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="760" height="95">
+<param name="movie" value="./nav_bar.swf?securemode=&amp;navopen="> <param name="quality" value="best"> <param name="bgcolor" value="#FFFFFF">
+<embed src="./nav_bar.swf?securemode=&amp;navopen=" quality="best" bgcolor="#FFFFFF" width="760" height="95" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></object>
 <!-- Body Start -->
 
-<!-- ------------------------ ---->
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td align="center">
 <table width="742" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
-<td width="642" valign="top"><img src="./images/header-privacy-a.gif" border="0" width="642" height="50"></td>
-<td width="100" rowspan="2" valign="top"><img src="./images/header-privacy-b.gif" border="0" width="100" height="80"></td>
+<td width="642" valign="top"><img src="./images/header-privacy-a.gif" border="0" width="642" height="50" alt=""></td>
+<td width="100" rowspan="2" valign="top"><img src="./images/header-privacy-b.gif" border="0" width="100" height="80" alt=""></td>
 </tr>
 <tr>
-<td width="642" align="right" class="SubSectionHeader" valign="top"><img src="./images/transparent.gif" border="0" width="1" height="30" align="left">&nbsp;</td>
+<td width="642" align="right" class="SubSectionHeader" valign="top"><img src="./images/transparent.gif" border="0" width="1" height="30" align="left" alt="">&nbsp;</td>
 </tr>
 </tbody></table>
 <table width="742" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td class="body">
-<!-- ------------------------ ---->
+<td class="Body" align="left">
+
 
 <b>Your Privacy</b>
 <br>Trust is an important part of the service that we provide to our customers. We make every effort to protect the confidentiality of your personal information. Read below to learn of some of the steps we have taken.
@@ -110,28 +75,45 @@ This site may contain links to other Web sites, including business card collecto
 
 
 
-<!-- ------------------------ ---->
+
 	</td>
   </tr>
 </tbody></table>
 </td>
 </tr>
 </tbody></table>
-<!-- ------------------------ ---->
+
 <br><br><br><br>
-<img src="track.php?label=Privacy+Policy&amp;rf=" width="1" height="1">	
+<img src="track.php?label=Privacy+Policy&amp;rf=" width="1" height="1" alt="">
 <!-- Body End -->
 </td>
-<td width="2" bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2"></td>
+<td width="2" bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2" alt=""></td>
 </tr>
 </tbody></table>
 <table width="764" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2"></td>
+<td bgcolor="#99CCFF"><img src="./images/transparent.gif" width="2" height="2" alt=""></td>
 </tr>
 </tbody></table>
-<font class="smallbody"><font class="copyright">© Prints Made Easy Inc. 2002</font> &nbsp; | &nbsp; <a href="./terms.php" class="copyright">Terms</a> &nbsp; | &nbsp; <a href="./privacy.php" class="copyright">Privacy</a> &nbsp; | &nbsp; <a href="./about.php" class="copyright">About Us</a> &nbsp; | &nbsp; <a href="./pricing.php" class="copyright">Pricing</a> &nbsp; | &nbsp; <a href="./business-cards-education.html" class="copyright">Business Card Tips</a></font><br>&nbsp;
-</div>
+<img src="./images/transparent.gif" width="2" height="3" alt=""><br>
+<font class="SmallBody">
+<a href="http://www.printsmadeeasy.com/terms.php" class="copyright">Terms</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/privacy.php" class="copyright">Privacy</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/about.php" class="copyright">About Us</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/pricing.php" class="copyright">Pricing</a> &nbsp; | &nbsp; <a href="http://www.printsmadeeasy.com/sitemap.html" class="copyright">Site Map</a> &nbsp; | &nbsp; <a href="http://www.printsmadeeasy.com/customer_service.php" class="copyright">Customer Service</a>
+<br><img src="./images/transparent.gif" width="2" height="3" alt=""><br>
+<a href="http://www.printsmadeeasy.com/business-cards.php" class="productLinkFooter" title="Business Cards">Business Cards</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/postcards.html" class="productLinkFooter" title="Postcards">Postcards</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/envelopes.html" class="productLinkFooter" title="Envelopes">Envelopes</a> &nbsp; | &nbsp;
+<a href="http://www.printsmadeeasy.com/letterhead.html" class="productLinkFooter" title="Letterhead">Letterhead</a>
+<br><img src="./images/transparent.gif" width="2" height="5" alt=""><br>
+<font class="copyright">© Prints Made Easy Inc. 2002 - 2009</font><br>
+</font>
+
+
+</td>
+</tr>
+</tbody></table>
 
 
 </body></html>
