--- a/s/sp/spa/spanx.com.html
+++ b/s/sp/spa/spanx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spanx.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216073032id_/http%3A//www.spanx.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbotnav_privacy_txt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spanx.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616111534id_/http%3A//www.spanx.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbotnav_privacy_txt) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 	<title>SPANX : Customer Service</title>
@@ -7,15 +7,22 @@
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Pragma" content="no-cache">
-<script type="text/javascript" src="http://spnx.imageg.net/js/df/Df.js"></script>
 <script type="text/javascript" src="http://spnx.imageg.net/js/flashobject.js"></script>
+<script type="text/javascript" src="http://spnx.imageg.net/js/df/Df.js"></script>
 <link rel="stylesheet" type="text/css" href="http://spnx.imageg.net/css/df_spnx_main.css">
 <link rel="stylesheet" type="text/css" href="http://spnx.imageg.net/css/df_slider.css">
 
 
 
-<meta name="keywords" content="">
+
+
+
+
+
+	<meta name="keywords" content="">
+
 <meta name="description" content="">
+
 
 
 	<link rel="stylesheet" href="http://spnx.imageg.net/css/pg_spnx_helpdesk.css">
@@ -31,6 +38,8 @@
 </head>
 <body>
 <!-- START include/header.jsp -->
+<script type="text/javascript" src="http://spnx.imageg.net/js/prototype1_6.js"></script>
+<script type="text/javascript" src="http://spnx.imageg.net/js/spnx.hc.topNav.js"></script>
 
 
 
@@ -67,13 +76,12 @@ that you require assistance.</div>
 				</div>
 				<ul id="main-menu">
 										<li id="nav-news"><a href="/category/index.jsp?categoryId=3010014&amp;clickid=topnav_new_txt" title="New">New</a></li>
-					<li id="nav-hosiery"><a href="/category/index.jsp?categoryId=2992042&amp;clickid=topnav_hosiery_txt" title="Hosiery, Tights &amp; Socks">Hosiery, Tights &amp; Socks</a></li>
 					<li id="nav-bodyshapers"><a href="/category/index.jsp?categoryId=2992553&amp;clickid=topnav_shapers_txt" title="Body Shapers">Body Shapers</a></li>
-					<li id="nav-camis"><a href="/category/index.jsp?categoryId=2992554&amp;clickid=topnav_camis_txt" title="Slimming Camis">Slimming Camis</a></li>
+					<li id="nav-hosiery"><a href="/category/index.jsp?categoryId=2992042&amp;clickid=topnav_hosiery_txt" title="Hosiery Shapers, Tights &amp; Sheers">Hosiery Shapers, Tights &amp; Sheers</a></li>
 					<li id="nav-braspanties"><a href="/category/index.jsp?categoryId=2992555&amp;clickid=topnav_bras_txt" title="Bras &amp; Panties">Bras &amp; Panties</a></li>
-					<li id="nav-apparel"><a href="/category/index.jsp?categoryId=2992556&amp;clickid=topnav_apparel_txt" title="Slimming Apparel">Slimming Apparel</a></li>
-					<li id="nav-plussize"><a href="/category/index.jsp?categoryId=2992557&amp;clickid=topnav_plussize_txt" title="Plus Size">Plus Size</a></li>
-					<li id="nav-specials"><a href="/category/index.jsp?categoryId=2992558&amp;clickid=topnav_specials_txt" title="Sale">Sale</a></li>
+					<li id="nav-camis"><a href="/category/index.jsp?categoryId=2992554&amp;clickid=topnav_camis_txt" title="Camis">Camis</a></li>
+					<li id="nav-apparel"><a href="/category/index.jsp?categoryId=2992556&amp;clickid=topnav_apparel_txt" title="Apparel">Apparel</a></li>
+					<li id="nav-hautecontour"><a href="/shop/index.jsp?categoryId=3481210&amp;clickid=topnav_apparel_txt" title="Haute Contour">Haute Contour</a></li>
 
 				</ul>
 			</div> <!-- end header-wrapper -->
@@ -392,7 +400,9 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 			   <ul id="topnavUL">
 					<li id="more_shop">More Ways To Shop</li>
 					<li id="collections"><a href="/category/index.jsp?categoryId=3026742" title="collections">Collections</a></li>
-					<li id="exclusives"><a href="/category/index.jsp?categoryId=3026745" title="web exclusives">Web Exclusives</a></li>										
+					<li id="exclusives"><a href="/category/index.jsp?categoryId=3026745" title="web exclusives">Web Exclusives</a></li>
+					<li id="plussize"><a href="/category/index.jsp?categoryId=2992557" title="plus size">Plus Size</a></li>
+					<li id="sale"><a href="/category/index.jsp?categoryId=2992558" title="sale">Sale</a></li>										
 					<li id="giftcertificates"><a href="/giftCertificates/index.jsp?categoryId=3026745&amp;cp=3026745.3029943" title="gift certificates">Gift Certificates<!--Need2changelink--></a></li>										
 				</ul>
 			</div>
@@ -415,7 +425,7 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 						<li id="testimonial"><a href="/corp/index.jsp?page=testimonials&amp;clickId=botnav_testimonial_text" title="testimonial">testimonial</a></li>								
 					</ul>
 				</div>
-			   <div id="copyright">© 2008 Spanx, Inc.</div>
+			   <div id="copyright">© 2009 Spanx, Inc.</div>
 			</div>						
 		</div> <!-- end footer -->
 		
@@ -431,7 +441,7 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 
 
 
-<!--You are running on ashprd1_ws_03_6-->
+<!--You are running on secprd2_ws_30_1-->
 
 
 
@@ -453,7 +463,7 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 
 
 
-<!--You are running on ashprd1_ws_03_6-->
+<!--You are running on secprd2_ws_30_1-->
 
 
 
@@ -469,6 +479,10 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 
 
 
+
+
+
+
 	
 	
 
@@ -480,7 +494,7 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 
 
 
-<!--You are running on ashprd1_ws_03_6-->
+<!--You are running on secprd2_ws_30_1-->
 
 
 
@@ -495,7 +509,7 @@ or fraudulent transactions to the fullest extent allowed by law.</p>
 var s_account='gsicspnx';
 var s_server='www.spanx.com';
 var s_hier1='';
-var s_eVar19='79533158624';
+var s_eVar19='70353262453';
 var s_channel='Home';
 var s_pageName='Customer Assistance - Customer Assitance Landing Page';
 </script>
@@ -505,6 +519,8 @@ var s_pageName='Customer Assistance - Customer Assitance Landing Page';
 
        
 	
+
+
 
 
 
