--- a/r/rv/rvu/rvusa.com.html
+++ b/r/rv/rvu/rvusa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rvusa.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165842id_/http%3A//www.rvusa.com/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rvusa.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616113603id_/http%3A//www.rvusa.com/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy or Statement : RVUSA - The Original Online RV Guide</title>
@@ -163,6 +163,11 @@ window.sidebar.addPanel(title, url, "")
   </tr>
   <tr valign="top"> 
     <td height="55" colspan="3" valign="bottom"><img src="/images/products_title.gif" alt="RV Products" width="171" height="50"></td>
+  </tr>
+  <tr valign="top"> 
+    <td width="21">&nbsp;</td>
+    <td width="140" height="18" valign="middle" background="/images/products_bg.gif" bgcolor="#FFE5BF">&nbsp;<a class="linksproducts" href="/bookstore/">RV Bookstore</a></td>
+    <td width="10" background="/images/white_bg.gif">&nbsp;</td>
   </tr>
   <tr valign="top"> 
     <td width="21">&nbsp;</td>
@@ -548,7 +553,7 @@ google_ad_format = "468x60_as";
         <td align="center">&nbsp;</td>
       </tr>
       <tr> 
-        <td align="center"><font class="footer">© 1995 - 2008 RVUSA.com. 
+        <td align="center"><font class="footer">© 1995 - 2009 RVUSA.com. 
           All Rights Reserved. <a href="/privacy_policy.asp" class="footer">Privacy 
           Statement</a>.</font></td>
       </tr>
