gtaa.com (archived on 2009-06-16)
{
  "alexa_rank": 91846,
  "analysis_subcorpus": true,
  "categories": "business;travel",
  "char_count": 1728,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.67,
  "homepage_snapshot_redirected_domain": "gtaa.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090106184357id_/http://gtaa.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090106184357id_/http%3A//gtaa.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gtaa.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616122532id_/http%3A//gtaa.com/en/privacy_policy",
  "policy_title": "Greater Toronto Airports Authority - Privacy Policy",
  "policy_url": "gtaa.com/en/privacy_policy",
  "sha1": "bf7fd436954704880b99b342cf81e84b65fbd2fa",
  "simhash": 13485884988030053966,
  "simhash_updated": true,
  "site_hostname": "gtaa.com",
  "site_url": "http://gtaa.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090616122532",
  "word_count": 278,
  "year": 2009
}

--- a/g/gt/gta/gtaa.com.html
+++ b/g/gt/gta/gtaa.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the gtaa.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012207id_/http%3A//gtaa.com/en/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gtaa.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616122532id_/http%3A//gtaa.com/en/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/favicon.ico">
 <script type="text/javascript" src="/administration/layouts/javascript"></script>
 <script type="text/javascript" src="/elements/javascripts/standard_javascript"></script>
-<script type="text/javascript" src="/local/javascript/utils.js"></script>
+<script type="text/javascript" src="/local/javascriptx/utils.js"></script>
 <script type="text/javascript" src="/local/javascript/tabber.js"></script>
 <script type="text/javascript" src="/local/javascript/ticker.js"></script>
 <link href="/elements/stylesheets/standard_stylesheet/" type="text/css" rel="stylesheet">
@@ -20,18 +20,27 @@
 
 <div class="layout">
 
+<script type="text/javascript">
+	if(typeof(validateAndSubmitForm) == 'undefined'){
+		var validateAndSubmitForm = function(formname, fields){
+			//alert('submitting form');
+			document.getElementById(formname).submit();
+		}
+
+	}
+</script>
 <div class="header"><span class="ELEMENT-elements-navigation-top_menu-index smartsite-element smartsite-element-editmode-both"><div class="ad">
 <span class="EDITABLE-Ad_Variable smartsite-editable"><script type="text/javascript" language="JavaScript1.1">
 <!-- Gtaa.com/PAGE@Leaderboards and Banners (728x90 and 468x60)
 if (typeof OAS_rns != "string" || OAS_rns.length != 9 || OAS_rns.search(/[^0-9]/) != -1) OAS_rns = new String (Math.random()).substring(2, 11);
 document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1'+OAS_rns+'@Top1,x15,Right1,Right2,x12!Top1?JX"></scr'+'ipt>');
 // -->
-</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1953987437@Top1,x15,Right1,Right2,x12!Top1?JX"></script></span>
+</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1638766283@Top1,x15,Right1,Right2,x12!Top1?JX"></script></span>
 </div>
 
 <div class="weather">
 	<a href="http://www.weatheroffice.ec.gc.ca/city/pages/on-143_metric_e.html" target="_blank"><img src="/local/images/en/weather_link.jpg" alt="Environment Canada Toronto Weather"></a>
-	<div class="datetime">December 15, 2008 8:22 PM EST</div>
+	<div class="datetime">June 16, 2009 8:25 AM EST</div>
 </div>
 <div class="logo"><img src="/local/images/global/logo_header_en.jpg" alt="GTAA Toronto Pearson International Airport - Ahead of the Curve"></div>
 
@@ -60,7 +69,25 @@ document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247re
 <div class="middle">
 	
 		<div class="travel_updates"><span class="ELEMENT-en-news-travel_advisories-summary smartsite-element smartsite-element-editmode-both">
-
+<table class="travel_advisories">
+	<tbody><tr>
+		<td style="white-space: nowrap;">
+			<h1 class="bullet_travel_updates">
+				Travel Updates:
+				<strong><span>
+					Jun 01, 2009 :
+					H1N1 Virus Update - Passenger Information:
+				</span></strong>
+			</h1>
+		</td>
+		<td style="padding: 5px;" width="*">
+			<p class="summary ticker"><span>Please be advised that the Public Health Agency of Canada (PHAC) is using enhanced vigilance when responding to passengers at Toronto Pearson that are exhibiting influenza-like symptoms.</span></p>
+		</td>
+		<td style="padding: 5px;white-space: nowrap; width:80px;" width="*">
+			<a class="more" href="/en/news/travel_advisories/details/3223eac8-57d9-473d-97d8-d9e7f860c05c">Learn More</a>
+		</td>
+	</tr>
+</tbody></table>
 </span></div>
 	
 
@@ -117,7 +144,7 @@ document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247re
 if (typeof OAS_rns != "string" || OAS_rns.length != 9 || OAS_rns.search(/[^0-9]/) != -1) OAS_rns = new String (Math.random()).substring(2, 11);
 document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1'+OAS_rns+'@Top1,x15,Right1,Right2,x12!x15?JX"></scr'+'ipt>');
 // -->
-</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1953987437@Top1,x15,Right1,Right2,x12!x15?JX"></script>
+</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1638766283@Top1,x15,Right1,Right2,x12!x15?JX"></script>
 				</div>
 </div>
 
@@ -129,7 +156,7 @@ document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247re
 if (typeof OAS_rns != "string" || OAS_rns.length != 9 || OAS_rns.search(/[^0-9]/) != -1) OAS_rns = new String (Math.random()).substring(2, 11);
 document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1'+OAS_rns+'@Top1,x15,Right1,Right2,x12!Right1?JX"></scr'+'ipt>');
 // -->
-</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1953987437@Top1,x15,Right1,Right2,x12!Right1?JX"></script>
+</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1638766283@Top1,x15,Right1,Right2,x12!Right1?JX"></script>
 
 
 <script type="text/javascript" language="JavaScript1.1">
@@ -137,14 +164,14 @@ document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247re
 if (typeof OAS_rns != "string" || OAS_rns.length != 9 || OAS_rns.search(/[^0-9]/) != -1) OAS_rns = new String (Math.random()).substring(2, 11);
 document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1'+OAS_rns+'@Top1,x15,Right1,Right2,x12!x12?JX"></scr'+'ipt>');
 // -->
-</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1953987437@Top1,x15,Right1,Right2,x12!x12?JX"></script>
+</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1638766283@Top1,x15,Right1,Right2,x12!x12?JX"></script>
 
 <script type="text/javascript" language="JavaScript1.1">
 <!-- Gtaa.com/PAGE@120x90 2
 if (typeof OAS_rns != "string" || OAS_rns.length != 9 || OAS_rns.search(/[^0-9]/) != -1) OAS_rns = new String (Math.random()).substring(2, 11);
 document.write('<scr'+'ipt LANGUAGE="JavaScript1.1" SRC="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1'+OAS_rns+'@Top1,x15,Right1,Right2,x12!Right2?JX"></scr'+'ipt>');
 // -->
-</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1953987437@Top1,x15,Right1,Right2,x12!Right2?JX"></script></span>
+</script><script language="JavaScript1.1" src="http://network-ca.247realmedia.com/RealMedia/ads/adstream_jx.ads/Gtaa.com/PAGE/1638766283@Top1,x15,Right1,Right2,x12!Right2?JX"></script></span>
 </span></td>
 		</tr>
 
